--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.6.0",
     "expo": "~42.0.1",
+    "expo-constants": "^11.0.2",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
